Cleaned up implementation of device handling
