# agents/daikin/internal/integration/controller/device.go
@@ -1,6 +1,8 @@
 package controller
 
 import (
+	"context"
+
 	"github.com/smarthomeix/agents/pkg/service"
 )
 
@@ -10,10 +12,10 @@ func (d *ControllerDriver) GetActions() service.ActionCollection {
 	return service.ActionCollection{}
 }
 
-func (d *ControllerDriver) GetTelemetry() (service.Telemetry, error) {
-	return service.Telemetry{}, nil
+func (d *ControllerDriver) GetTelemetry(ctx context.Context) (service.TelemetryData, error) {
+	return service.TelemetryData{}, nil
 }
 
-func (d *ControllerDriver) ExecuteAction(req service.ExecuteActionRequest) (service.ExecuteActionResult, error) {
+func (d *ControllerDriver) ExecuteAction(ctx context.Context, req service.ExecuteActionRequest) (service.ExecuteActionResult, error) {
 	return service.ExecuteActionResult{}, nil
 }
